fix visibility empty images

--- a/addon/src/css/main.css
+++ b/addon/src/css/main.css
@@ -122,6 +122,10 @@ img {
     vertical-align: middle;
 }
 
+img:not([src]) {
+    visibility: hidden;
+}
+
 img,
 .fill-context,
 .search-input {
